--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="xyz.daijoubuteam.foodshoppingappadmin.ui.profile.editprofile.EditProfileViewModel" />
@@ -15,43 +16,20 @@
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true">
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/imageChevronleft"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            app:backgroundTint="#4DFFFFFF"
-            app:borderWidth="0dp"
-            app:elevation="0dp"
-            app:layout_constraintBottom_toBottomOf="@id/tvEateryInformation"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tvEateryInformation"
-            app:pressedTranslationZ="0dp"
-            app:srcCompat="@drawable/img_chevronleft"
-            tools:ignore="ContentDescription" />
 
-        <TextView
-            android:id="@+id/tvEateryInformation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:fontFamily="@font/avenir_next_lt_pro"
-            android:text="@string/eatery_information"
-            android:textSize="24sp"
-            android:layout_marginVertical="16dp"
-            app:layout_constraintStart_toEndOf="@id/imageChevronleft"
-            app:layout_constraintTop_toTopOf="parent" />
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:orientation="vertical"
             android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageChevronleft"
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@id/btn_save"
-            android:layout_marginBottom="10dp">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/etEateryName"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -62,15 +40,15 @@
                     android:layout_marginEnd="24dp"
                     android:fontFamily="@font/avenir_next_lt_pro"
                     android:hint="@string/eatery_name"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        tools:text="Trần Văn"
-                        android:text="@={viewModel.eatery.name}"/>
+                        android:text="@={viewModel.eatery.name}"
+                        tools:text="Trần Văn" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -78,22 +56,22 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="24dp"
                     android:fontFamily="@font/avenir_next_lt_pro"
                     android:hint="@string/eatery_description"
                     android:singleLine="true"
                     android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/etEateryName">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        tools:text="An"
-                        android:text="@={viewModel.eatery.description}"/>
+                        android:text="@={viewModel.eatery.description}"
+                        tools:text="An" />
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -103,58 +81,61 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"
                     android:layout_marginTop="12dp"
+                    android:layout_marginEnd="24dp"
                     android:fontFamily="@font/avenir_next_lt_pro"
                     android:hint="@string/worktime"
                     android:singleLine="true"
                     android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/etEateryDescription">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        tools:text="1am - 2am"
-                        android:text="@={viewModel.eatery.work_time}"/>
+                        android:text="@={viewModel.eatery.work_time}"
+                        tools:text="1am - 2am" />
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl_address_header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="24dp"
                     android:layout_marginTop="12dp"
-                    app:layout_constraintTop_toBottomOf="@id/etEateryWorktime"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/etEateryWorktime">
+
                     <TextView
                         android:id="@+id/tvEateryAddress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         android:text="@string/eatery_address"
-                        android:textSize="20sp"/>
+                        android:textSize="20sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_change_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="@id/tvEateryAddress"
-                        app:layout_constraintBottom_toBottomOf="@id/tvEateryAddress"
-                        app:layout_constraintEnd_toEndOf="parent"
                         android:backgroundTint="@color/white"
-                        android:insetTop="0dp"
-                        android:stateListAnimator="@null"
-                        android:insetBottom="0dp"
                         android:ellipsize="end"
+                        android:insetTop="0dp"
+                        android:insetBottom="0dp"
                         android:singleLine="true"
+                        android:stateListAnimator="@null"
+                        android:text="@string/change"
                         android:textAllCaps="true"
                         android:textColor="@color/orange_400"
                         android:textFontWeight="400"
                         android:textSize="16sp"
-                        tools:ignore="UnusedAttribute"
-                        android:text="@string/change"/>
+                        app:layout_constraintBottom_toBottomOf="@id/tvEateryAddress"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/tvEateryAddress"
+                        tools:ignore="UnusedAttribute" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -175,56 +156,60 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        tools:text="KTX Khu A"
-                        android:text="@={viewModel.eatery.addressEatery.address}" />
+                        android:text="@={viewModel.eatery.addressEatery.address}"
+                        tools:text="KTX Khu A" />
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl_image"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.33"
-                    app:layout_constraintTop_toBottomOf="@id/etEateryAddress"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/etEateryAddress">
+
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginHorizontal="24dp"
+                        android:layout_marginVertical="10dp"
+                        app:cardCornerRadius="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        android:layout_marginVertical="10dp"
-                        android:layout_marginHorizontal="24dp"
-                        app:cardCornerRadius="8dp">
+                        app:layout_constraintTop_toTopOf="parent">
+
                         <ImageView
                             android:id="@+id/img_description"
-                            android:scaleType="fitXY"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            tools:src="@drawable/ic_orange_and_white_polygon_background_template_design"
-                            app:imageUrl="@{viewModel.eatery.photoUrl}"/>
+                            android:scaleType="fitXY"
+                            app:imageUrl="@{viewModel.eatery.photoUrl}"
+                            tools:src="@drawable/ic_orange_and_white_polygon_background_template_design" />
                     </androidx.cardview.widget.CardView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_select_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/cl_image"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="6dp"
                     android:layout_marginHorizontal="24dp"
                     android:layout_marginTop="12dp"
+                    android:layout_marginBottom="6dp"
                     android:backgroundTint="@color/lightOrange"
+                    android:ellipsize="end"
                     android:insetTop="0dp"
                     android:insetBottom="0dp"
-                    android:ellipsize="end"
                     android:singleLine="true"
+                    android:text="select image"
                     android:textAllCaps="true"
                     android:textColor="@color/white_A700"
                     android:textFontWeight="400"
                     android:textSize="16sp"
-                    tools:ignore="UnusedAttribute"
-                    android:text="select image" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cl_image"
+                    tools:ignore="UnusedAttribute" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
@@ -232,21 +217,21 @@
             android:id="@+id/btn_save"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="10dp"
             android:backgroundTint="@color/blue_A200"
+            android:ellipsize="end"
             android:insetTop="0dp"
             android:insetBottom="0dp"
-            android:ellipsize="end"
+            android:onClick="@{() -> viewModel.updateProfileInfo()}"
             android:singleLine="true"
+            android:text="save"
             android:textAllCaps="true"
             android:textColor="@color/white_A700"
-            android:onClick="@{() -> viewModel.updateProfileInfo()}"
             android:textFontWeight="400"
             android:textSize="16sp"
-            tools:ignore="UnusedAttribute"
-            android:text="save" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="UnusedAttribute" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
