--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -4,102 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="xyz.daijoubuteam.foodshoppingappadmin.ui.report.orderdetail.OrderDetailViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:context=".ui.report.orderdetail.OrderDetailFragment">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_order_detail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/imageChevronleft"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="fitXY"
-                app:backgroundTint="#4DFFFFFF"
-                app:borderWidth="0dp"
-                app:elevation="0dp"
-                app:layout_constraintBottom_toBottomOf="@id/tvOrder"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tvOrder"
-                app:pressedTranslationZ="0dp"
-                app:srcCompat="@drawable/img_chevronleft"
-                tools:ignore="ContentDescription" />
-            <TextView
-                android:id="@+id/tvOrder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:fontFamily="@font/avenir_next_lt_pro"
-                android:text="@string/order_detail"
-                android:textSize="24sp"
-                app:layout_constraintStart_toEndOf="@id/imageChevronleft"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <TextView
             android:id="@+id/tvCustomerName"
-            android:ellipsize="end"
-            android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:singleLine="true"
-            app:layout_constraintTop_toBottomOf="@id/cl_order_detail"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="8dp"
-            android:textSize="16sp"
-            android:textColor="@color/bluegray_700"
+            android:ellipsize="end"
             android:fontFamily="@font/avenir_next_lt_pro"
-            android:textFontWeight="600"
+            android:singleLine="true"
             android:text="@{viewModel.selectedProperty.customerName}"
-            tools:text="Đỗ Phú Quang"
-            tools:ignore="HardcodedText,UnusedAttribute" />
+            android:textColor="@color/bluegray_700"
+            android:textFontWeight="600"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText,UnusedAttribute"
+            tools:text="Đỗ Phú Quang" />
+
         <TextView
             android:id="@+id/tvOrderTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:singleLine="true"
+            android:text="@{viewModel.selectedProperty.orderTime.toDate().toLocaleString()}"
             android:textColor="@color/gray_700"
             android:textFontWeight="500"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/tvCustomerName"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvCustomerName"
             tools:ignore="HardcodedText,UnusedAttribute"
-            android:text="@{viewModel.selectedProperty.orderTime.toDate().toLocaleString()}"
             tools:text="Thời gian đặt: 16h30" />
+
         <TextView
             android:id="@+id/tvAddress"
-            android:ellipsize="end"
-            android:gravity="start"
-            android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:singleLine="true"
-            app:layout_constraintTop_toBottomOf="@id/tvOrderTime"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
-            android:textColor="@color/gray_500"
-            android:textSize="13sp"
+            android:ellipsize="end"
             android:fontFamily="@font/avenir_next_lt_pro"
+            android:gravity="start"
+            android:singleLine="true"
+            android:textColor="@color/gray_500"
             android:textFontWeight="500"
-            tools:text="Địa chỉ: KTX Khu A, ĐHQG TP.HCM"
-            tools:ignore="UnusedAttribute" />
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderTime"
+            tools:ignore="UnusedAttribute"
+            tools:text="Địa chỉ: KTX Khu A, ĐHQG TP.HCM" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/productsInOrderRecyclerView"
             android:layout_width="match_parent"
@@ -108,31 +80,33 @@
             android:nestedScrollingEnabled="false"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/tvAddress"
+            app:layout_constraintBottom_toTopOf="@id/cardTotal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/cardTotal"
+            app:layout_constraintTop_toBottomOf="@id/tvAddress"
             tools:itemCount="10"
             tools:listitem="@layout/item_product_in_order" />
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cardTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/productsInOrderRecyclerView"
+            android:layout_marginVertical="20dp"
+            android:layout_marginEnd="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginVertical="20dp"
-            android:layout_marginEnd="24dp">
+            app:layout_constraintTop_toBottomOf="@id/productsInOrderRecyclerView">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Total: $15.60"
-                android:text="@{@string/total(viewModel.total)}"
-                android:paddingVertical="8dp"
                 android:paddingHorizontal="24dp"
+                android:paddingVertical="8dp"
+                android:text="@{@string/total(viewModel.total)}"
+                android:textColor="@color/deep_orange_A200"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:textColor="@color/deep_orange_A200"/>
+                tools:text="Total: $15.60" />
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
