--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -18,21 +18,27 @@
             android:text="@string/events"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginVertical="24dp"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="20dp"
-            android:textSize="20sp"
+            android:textSize="22sp"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:textStyle="bold"
             android:textColor="@color/bluegray_500" />
+        <View
+            android:id="@+id/tvDividerEvents"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            app:layout_constraintTop_toBottomOf="@id/tvEvents"
+            android:layout_marginTop="16dp"
+            android:background="@color/bluegray_50"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/eventRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="20dp"
             android:nestedScrollingEnabled="false"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@+id/tvEvents"
+            app:layout_constraintTop_toBottomOf="@+id/tvDividerEvents"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
