--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -10,12 +10,21 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="12dp"
         tools:ignore="ExtraText"
         android:elevation="4dp"
         android:clickable="true"
         android:focusable="true"
         android:background="?attr/selectableItemBackground">
+        <ImageView
+            android:id="@+id/imageStatus"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            tools:src="@drawable/pending"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/tvCustomerName"
             android:ellipsize="end"
@@ -24,7 +33,7 @@
             android:layout_marginStart="16dp"
             android:singleLine="true"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageStatus"
             app:layout_constraintEnd_toEndOf="parent"
             android:textSize="18sp"
             android:textColor="@color/orange_400"
@@ -44,7 +53,7 @@
             android:textFontWeight="500"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/tvCustomerName"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageStatus"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
@@ -61,7 +70,7 @@
             android:layout_width="0dp"
             android:singleLine="true"
             app:layout_constraintTop_toBottomOf="@id/tvOrderTime"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageStatus"
             app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@color/gray_500"
             android:textSize="13sp"
