--- a/app/src/main/res/layout/fragment_edit_order.xml
+++ b/app/src/main/res/layout/fragment_edit_order.xml
@@ -19,7 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:ellipsize="end"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:singleLine="true"
@@ -70,21 +70,34 @@
             android:text="@{viewModel.selectedProperty.shippingAddress.address}"
             tools:text="Địa chỉ: KTX Khu A, ĐHQG TP.HCM"
             tools:ignore="UnusedAttribute" />
+        <View
+            android:id="@+id/tvDivider1"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            app:layout_constraintTop_toBottomOf="@id/tvAddress"
+            android:layout_marginTop="16dp"
+            android:background="@color/bluegray_50"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/productsInOrderRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="20dp"
             android:nestedScrollingEnabled="false"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/cardTotal"
+            app:layout_constraintBottom_toTopOf="@id/tvDivider2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAddress"
+            app:layout_constraintTop_toBottomOf="@id/tvDivider1"
             tools:itemCount="10"
             tools:listitem="@layout/item_product_in_order" />
-
+        <View
+            android:id="@+id/tvDivider2"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            app:layout_constraintBottom_toTopOf="@id/cardTotal"
+            android:layout_marginBottom="16dp"
+            android:background="@color/bluegray_50"/>
         <androidx.cardview.widget.CardView
             android:id="@+id/cardTotal"
             android:layout_width="wrap_content"
