--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -20,7 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:textSize="18sp"
             android:textColor="@color/orange_400"
             android:fontFamily="@font/avenir_next_lt_pro"
@@ -54,35 +54,48 @@
             android:id="@+id/tvAddress"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginHorizontal="24dp"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:gravity="start"
-            android:singleLine="true"
+            android:singleLine="false"
             android:textColor="@color/gray_500"
             android:textFontWeight="500"
             android:text="@{viewModel.selectedProperty.shippingAddress.address}"
-            tools:text="Địa chỉ: KTX Khu A, ĐHQG TP.HCM"
+            tools:text="Địa chỉ: KTX Khu A, ĐHQGKhu A, ĐHQG TP.Khu A, ĐHQG TP. TP.HCM"
             app:layout_constraintTop_toBottomOf="@id/tvOrderTime"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:ignore="UnusedAttribute" />
+        <View
+            android:id="@+id/tvDivider1"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            app:layout_constraintTop_toBottomOf="@id/tvAddress"
+            android:layout_marginTop="16dp"
+            android:background="@color/bluegray_50"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/productsInOrderRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="20dp"
             android:nestedScrollingEnabled="false"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/cardTotal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAddress"
+            app:layout_constraintTop_toBottomOf="@id/tvDivider1"
+            app:layout_constraintBottom_toTopOf="@id/tvDivider2"
             tools:itemCount="10"
             tools:listitem="@layout/item_product_in_order" />
-
+        <View
+            android:id="@+id/tvDivider2"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            app:layout_constraintBottom_toTopOf="@id/cardTotal"
+            android:layout_marginBottom="16dp"
+            android:background="@color/bluegray_50"/>
         <androidx.cardview.widget.CardView
             android:id="@+id/cardTotal"
             android:layout_width="wrap_content"
@@ -90,8 +103,7 @@
             android:layout_marginVertical="20dp"
             android:layout_marginEnd="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/productsInOrderRecyclerView">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
                 android:layout_width="wrap_content"
