--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -19,22 +19,29 @@
             android:text="@string/report"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginVertical="24dp"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="20dp"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:textStyle="bold"
             android:textColor="@color/bluegray_500" />
+        <View
+            android:id="@+id/tvDividerReport"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            app:layout_constraintTop_toBottomOf="@id/tvReport"
+            android:layout_marginTop="16dp"
+            android:background="@color/bluegray_50"/>
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etMonth"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="12dp"
             app:boxStrokeColor="@color/orange_400"
-            app:layout_constraintTop_toBottomOf="@id/tvReport"
+            app:layout_constraintTop_toBottomOf="@id/tvDividerReport"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/etYear"
             android:hint="@string/month">
@@ -76,77 +83,82 @@
                 android:inputType="none"
                 android:hint="@string/year"/>
         </com.google.android.material.textfield.TextInputLayout>
+        <View
+            android:id="@+id/tvDivider1"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            app:layout_constraintTop_toBottomOf="@id/etMonth"
+            android:layout_marginTop="16dp"
+            android:background="@color/bluegray_50"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/ordersRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintTop_toBottomOf="@id/etMonth"
-            app:layout_constraintBottom_toTopOf="@id/cvSummary"
+            app:layout_constraintTop_toBottomOf="@id/tvDivider1"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tvDivider2"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="10"
             tools:listitem="@layout/item_order" />
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cvSummary"
-            android:layout_width="0dp"
+        <View
+            android:id="@+id/tvDivider2"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            app:layout_constraintTop_toBottomOf="@id/ordersRecyclerView"
+            app:layout_constraintBottom_toTopOf="@id/constraintSummary"
+            android:background="@color/bluegray_50"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintSummary"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="24dp"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginBottom="16dp">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="20dp">
-                <TextView
-                    android:id="@+id/tvTextTotalOrders"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:textSize="20sp"
-                    android:textFontWeight="600"
-                    android:text="@string/total_orders"
-                    tools:ignore="UnusedAttribute" />
-                <TextView
-                    android:id="@+id/tvTotalOrders"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="@id/tvTextTotalOrders"
-                    app:layout_constraintStart_toEndOf="@id/tvTextTotalOrders"
-                    android:layout_marginStart="4dp"
-                    android:textColor="@color/deep_orange_A200"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:text="@{viewModel.totalOrderLabel}" />
-                <TextView
-                    android:id="@+id/tvTextTotalRevenue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/tvTextTotalOrders"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="8dp"
-                    android:textSize="20sp"
-                    android:textFontWeight="600"
-                    android:text="@string/total_revenue"
-                    tools:ignore="UnusedAttribute" />
-                <TextView
-                    android:id="@+id/tvTotalRevenue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="@id/tvTextTotalRevenue"
-                    app:layout_constraintStart_toEndOf="@id/tvTextTotalRevenue"
-                    android:layout_marginStart="4dp"
-                    android:textColor="@color/deep_orange_A200"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:text="@{'$' + viewModel.totalRevenue.toString()}"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+            app:layout_constraintEnd_toEndOf="parent">
+            <TextView
+                android:id="@+id/tvTextTotalOrders"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="@string/total_orders"
+                tools:ignore="UnusedAttribute" />
+            <TextView
+                android:id="@+id/tvTotalOrders"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/tvTextTotalOrders"
+                app:layout_constraintStart_toEndOf="@id/tvTextTotalOrders"
+                android:layout_marginStart="4dp"
+                android:textColor="@color/deep_orange_A200"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:text="@{viewModel.totalOrderLabel}" />
+            <TextView
+                android:id="@+id/tvTextTotalRevenue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/tvTextTotalOrders"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="@string/total_revenue"
+                tools:ignore="UnusedAttribute" />
+            <TextView
+                android:id="@+id/tvTotalRevenue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/tvTextTotalRevenue"
+                app:layout_constraintStart_toEndOf="@id/tvTextTotalRevenue"
+                android:layout_marginStart="4dp"
+                android:textColor="@color/deep_orange_A200"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:text="@{'$' + viewModel.totalRevenue.toString()}"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
