--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -98,7 +98,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:inputType="numberDecimal"
+                        android:inputType="numberSigned"
                         android:padding="16dp"
                         android:text="@={viewmodel.price}"
                         android:textColor="@color/gray_800"
