--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="24dp"
                 android:paddingVertical="8dp"
-                android:text="@{@string/total(viewModel.total)}"
+                android:text="@{@string/total_price(viewModel.total)}"
                 android:textColor="@color/deep_orange_A200"
                 android:textSize="18sp"
                 android:textStyle="bold"
