--- a/app/src/main/res/layout/item_product_in_order.xml
+++ b/app/src/main/res/layout/item_product_in_order.xml
@@ -62,7 +62,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             tools:ignore="HardcodedText,UnusedAttribute"
-            android:text="@{'$' + product.productPrice.toString()}"
+            android:text="@{@string/product_price(Double.toString(product.productPrice))}"
             tools:text="$ 12.00" />
         <TextView
             android:id="@+id/tvQuantity"
